--- a/demo-basic/src/main/resources/application.properties
+++ b/demo-basic/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useUni
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+
+mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.type-aliases-package=com.redbyte.platform.demobasic.core.domain.entity
