--- a/demo-basic/src/main/resources/application.properties
+++ b/demo-basic/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=root
 
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.redbyte.platform.demobasic.core.domain.entity
+
+logging.file.path=/logs/demo-basic/
+logging.file.name=demo-basic.log
+logging.level.root=warn
+logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
