--- a/demo-basic/src/main/resources/application.properties
+++ b/demo-basic/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=CTT&nullCatalogMeansCurrent=true
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.redbyte.platform.demobasic.core.domain.entity
 
-logging.file.path=/logs/demo-basic/
-logging.file.name=demo-basic.log
-logging.level.root=warn
-logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+#logging.file.path=/logs/demo-basic/
+#logging.file.name=demo-basic.log
+#logging.level.root=warn
+#logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
