--- a/demo-basic/src/main/resources/application.properties
+++ b/demo-basic/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=root
 
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.redbyte.platform.demobasic.core.domain.entity
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #logging.file.path=/logs/demo-basic/
 #logging.file.name=demo-basic.log
