--- a/demo-websocket/src/main/resources/application.properties
+++ b/demo-websocket/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=demo-websocket-messageGroup
 
+demo.websocket.rocketmq.topic=demo-websocket-messageTopic
