--- a/demo-basic/src/main/resources/application.properties
+++ b/demo-basic/src/main/resources/application.properties
@@ -8,7 +8,7 @@ mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.redbyte.platform.demobasic.core.domain.entity
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-#logging.file.path=/logs/demo-basic/
-#logging.file.name=demo-basic.log
-#logging.level.root=warn
-#logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+logging.file.path=/logs/demo-basic/
+logging.file.name=demo-basic.log
+logging.level.root=warn
+logging.pattern.console=%d - %thread %-5level - %msg%n
