--- a/demo-flowable/src/main/resources/application.properties
+++ b/demo-flowable/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=CTT&nullCatalogMeansCurrent=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
+# 关闭定时任务
+flowable.async-executor-activate=false
+# schema update
+flowable.database-schema-update=true
+
+server.port=80
